[gd_scene load_steps=7 format=3 uid="uid://dae5airjwff28"]

[ext_resource type="Theme" uid="uid://dhstdcnd4x62y" path="res://Themes/dialog_node_theme.tres" id="1_kfng2"]
[ext_resource type="Script" path="res://GraphNode.gd" id="2_5cqbw"]
[ext_resource type="PackedScene" uid="uid://du8buwy48dvor" path="res://CodeEdit.tscn" id="2_53o6y"]
[ext_resource type="Texture2D" uid="uid://dqwpfhmo1eh88" path="res://Assets/UI/Divider.svg" id="2_okvfh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_03hav"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_bq281"]
resource_local_to_scene = true
number_color = Color(1, 1, 1, 1)
symbol_color = Color(1, 1, 1, 1)
function_color = Color(1, 1, 1, 1)
member_variable_color = Color(1, 1, 1, 1)
color_regions = {
"!! !!": Color(1, 0.211765, 0, 1),
"#": Color(1, 1, 1, 0.490196),
"(( ))": Color(0.8, 0.737255, 0.435294, 1),
"+ +": Color(0.8, 0.737255, 0.435294, 1),
"+( )": Color(0.486275, 0.803922, 0.980392, 1),
"- -": Color(0.8, 0.737255, 0.435294, 1),
"-( )": Color(0.486275, 0.803922, 0.980392, 1),
"<< >>": Color(0.141176, 0.698039, 0.584314, 1),
"[ ]": Color(0.972549, 0.67451, 0.905882, 1),
"| |": Color(0.729412, 0.392157, 1, 1)
}

[node name="GraphNode" type="GraphNode" groups=["DIALOG", "graph_nodes"]]
anchors_preset = -1
anchor_right = 0.204
anchor_bottom = 0.235
offset_right = 8.32001
offset_bottom = 106.2
mouse_default_cursor_shape = 6
theme = ExtResource("1_kfng2")
theme_override_constants/separation = 10
title = "NodeTitle"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color(1, 1, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color(1, 1, 1, 1)
slot/7/left_icon = null
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color(1, 1, 1, 1)
slot/7/right_icon = null
slot/7/draw_stylebox = true
script = ExtResource("2_5cqbw")
metadata/_edit_use_anchors_ = true

[node name="SpeakerHBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SpeakerVBox" type="VBoxContainer" parent="SpeakerHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SpeakerHBox/SpeakerVBox"]
layout_mode = 2
text = "Speaker"

[node name="LineEdit" type="LineEdit" parent="SpeakerHBox/SpeakerVBox"]
visible = false
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="SpeakerHBox/SpeakerVBox"]
layout_mode = 2
tooltip_text = "You can add or change character names 
by going to the inspector in GraphNode.tscn 
(Character > Character > OptionButton).
"
item_count = 5
selected = 0
popup/item_0/text = "Narrator"
popup/item_0/id = 0
popup/item_1/text = "Main Person"
popup/item_1/id = 1
popup/item_2/text = "Second Person"
popup/item_2/id = 2
popup/item_3/text = "SMS"
popup/item_3/id = 3
popup/item_4/text = "App"
popup/item_4/id = 4

[node name="Divider" type="TextureRect" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_okvfh")
stretch_mode = 2

[node name="ImageTypeHBox" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="ImageType" type="OptionButton" parent="ImageTypeHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_colors/font_focus_color = Color(0.498039, 0.498039, 0.498039, 1)
item_count = 4
selected = 0
popup/item_0/text = "(set big image)"
popup/item_0/id = 0
popup/item_1/text = "PAPERDOLL"
popup/item_1/id = 1
popup/item_2/text = "SOLO"
popup/item_2/id = 2
popup/item_3/text = "DUO"
popup/item_3/id = 3

[node name="PaperDollInfo" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 9

[node name="ExpressionHBox" type="HBoxContainer" parent="PaperDollInfo"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="Expression" type="OptionButton" parent="PaperDollInfo/ExpressionHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_colors/font_focus_color = Color(0.498039, 0.498039, 0.498039, 1)
item_count = 8
selected = 0
popup/item_0/text = "Eyes"
popup/item_0/id = 0
popup/item_1/text = "OPEN"
popup/item_1/id = 1
popup/item_2/text = "HALF"
popup/item_2/id = 2
popup/item_3/text = "SCARED"
popup/item_3/id = 3
popup/item_4/text = "ANGRY"
popup/item_4/id = 4
popup/item_5/text = "CLOSED"
popup/item_5/id = 5
popup/item_6/text = "WIDE"
popup/item_6/id = 6
popup/item_7/text = "ROLLING"
popup/item_7/id = 7

[node name="LowerExpression" type="OptionButton" parent="PaperDollInfo/ExpressionHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_colors/font_focus_color = Color(0.498039, 0.498039, 0.498039, 1)
item_count = 7
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Mouth"
popup/item_0/id = 0
popup/item_1/text = "SMILE"
popup/item_1/id = 1
popup/item_2/text = "PARTED"
popup/item_2/id = 2
popup/item_3/text = "GAPING"
popup/item_3/id = 3
popup/item_4/text = "FROWN"
popup/item_4/id = 4
popup/item_5/text = "CLENCHED"
popup/item_5/id = 5
popup/item_6/text = "BITELIP"
popup/item_6/id = 6

[node name="PoseFrameHBox" type="HBoxContainer" parent="PaperDollInfo"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="Pose" type="OptionButton" parent="PaperDollInfo/PoseFrameHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_colors/font_focus_color = Color(0.498039, 0.498039, 0.498039, 1)
item_count = 6
selected = 0
popup/item_0/text = "Pose"
popup/item_0/id = 0
popup/item_1/text = "DEFAULT"
popup/item_1/id = 1
popup/item_2/text = "NERVOUS"
popup/item_2/id = 2
popup/item_3/text = "ANGRY"
popup/item_3/id = 3
popup/item_4/text = "FROM_BEHIND"
popup/item_4/id = 4
popup/item_5/text = "BENT_OVER"
popup/item_5/id = 5

[node name="Framing" type="OptionButton" parent="PaperDollInfo/PoseFrameHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_colors/font_focus_color = Color(0.498039, 0.498039, 0.498039, 1)
item_count = 4
selected = 0
popup/item_0/text = "Framing"
popup/item_0/id = 0
popup/item_1/text = "FACE"
popup/item_1/id = 1
popup/item_2/text = "BUST"
popup/item_2/id = 2
popup/item_3/text = "FULL"
popup/item_3/id = 3

[node name="SoloInfo" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 18

[node name="Label" type="Label" parent="SoloInfo"]
layout_mode = 2
text = "Solo Pose: "

[node name="SoloDropdown" type="OptionButton" parent="SoloInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_colors/font_focus_color = Color(0.498039, 0.498039, 0.498039, 1)
item_count = 14
selected = 0
popup/item_0/text = "SITTING"
popup/item_0/id = 0
popup/item_1/text = "KNEELING"
popup/item_1/id = 1
popup/item_2/text = "HUG"
popup/item_2/id = 2
popup/item_3/text = "FROM_BEHIND"
popup/item_3/id = 3
popup/item_4/text = "BENT_OVER"
popup/item_4/id = 4
popup/item_5/text = "ALL_FOURS"
popup/item_5/id = 5
popup/item_6/text = "MISSIONARY"
popup/item_6/id = 6
popup/item_7/text = "PILEDRIVER"
popup/item_7/id = 7
popup/item_8/text = "WALKING_AWAY"
popup/item_8/id = 8
popup/item_9/text = "ASSJOB"
popup/item_9/id = 9
popup/item_10/text = "COWGIRL"
popup/item_10/id = 10
popup/item_11/text = "FACE_SITTING"
popup/item_11/id = 11
popup/item_12/text = "PAIZURI"
popup/item_12/id = 12
popup/item_13/text = "SLEEPING"
popup/item_13/id = 13

[node name="DuoInfo" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 18

[node name="Label" type="Label" parent="DuoInfo"]
layout_mode = 2
text = "Duo Pose: "

[node name="DuoDropdown" type="OptionButton" parent="DuoInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_colors/font_focus_color = Color(0.498039, 0.498039, 0.498039, 1)
item_count = 1
selected = 0
popup/item_0/text = "HOLDING_HANDS"
popup/item_0/id = 0

[node name="Text" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Divider" type="TextureRect" parent="Text"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_okvfh")
stretch_mode = 2

[node name="Label" type="Label" parent="Text"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_03hav")
text = "Text"

[node name="TextEdit" parent="Text" instance=ExtResource("2_53o6y")]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/background_color = Color(0, 0, 0, 0)
text = ""
placeholder_text = "Character dialog goes here... 
"
syntax_highlighter = SubResource("CodeHighlighter_bq281")
scroll_v_scroll_speed = 90.0
scroll_fit_content_height = true

[node name="LineAsset" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Line Asset" type="Label" parent="LineAsset"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_03hav")
text = "Image Type/ID/Effect"

[node name="LineEdit" type="LineEdit" parent="LineAsset"]
visible = false
layout_mode = 2
tooltip_text = "Useful for attaching voice acting file (as a string).
Separate files by comma."
placeholder_text = "optional"

[node name="HBoxContainer" type="HBoxContainer" parent="LineAsset"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ImageType" type="OptionButton" parent="LineAsset/HBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "-none-"
popup/item_0/id = 0
popup/item_1/text = "Main"
popup/item_1/id = 1
popup/item_2/text = "Popup"
popup/item_2/id = 2

[node name="LineEdit" type="LineEdit" parent="LineAsset/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ImageEffect" type="OptionButton" parent="LineAsset/HBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "none"
popup/item_0/id = 0
popup/item_1/text = "hide"
popup/item_1/id = 1
popup/item_2/text = "quake"
popup/item_2/id = 2

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="item_selected" from="SpeakerHBox/SpeakerVBox/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="ImageTypeHBox/ImageType" to="." method="_on_image_type_item_selected"]
[connection signal="item_selected" from="PaperDollInfo/ExpressionHBox/Expression" to="." method="_on_expression_item_selected"]
[connection signal="item_selected" from="PaperDollInfo/ExpressionHBox/LowerExpression" to="." method="_on_lower_expression_item_selected"]
[connection signal="item_selected" from="PaperDollInfo/PoseFrameHBox/Pose" to="." method="_on_pose_item_selected"]
[connection signal="item_selected" from="PaperDollInfo/PoseFrameHBox/Framing" to="." method="_on_framing_item_selected"]
[connection signal="item_selected" from="SoloInfo/SoloDropdown" to="." method="_on_solo_dropdown_item_selected"]
[connection signal="item_selected" from="DuoInfo/DuoDropdown" to="." method="_on_duo_dropdown_item_selected"]
[connection signal="item_selected" from="LineAsset/HBoxContainer/ImageType" to="." method="_on_image_type_item_selected"]
[connection signal="item_selected" from="LineAsset/HBoxContainer/ImageEffect" to="." method="_on_image_effect_item_selected"]

[editable path="Text/TextEdit"]
